--- a/client/admin/admin.cases.html
+++ b/client/admin/admin.cases.html
@@ -1,9 +1,14 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
         <div class="collapse navbar-collapse" id="myNavbar">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="">FJC</a>
-            </div>
+            <a class="navbar-brand" href="">Federation of jewish communities of the CIS</a>
             <ul class="nav navbar-nav">
                 <li><a href="#/admin/users">Users</a></li>
                 <li><a href="#/admin/cases">Cases</a></li>
