--- a/client/password/password.html
+++ b/client/password/password.html
@@ -1,16 +1,22 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container-fluid">
-		<div class="collapse navbar-collapse" id="myNavbar">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="">Federation of jewish communities of the CIS</a>
-			</div>
-			<ul class="nav navbar-nav"></ul>
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-				<li><a href="#/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-			</ul>
-		</div>
-	</div>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+        	<a class="navbar-brand" href="">Federation of jewish communities of the CIS</a>
+            <ul class="nav navbar-nav"></ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                <li><a href="#/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            </ul>
+        </div>
+    </div>
 </nav>
 
 <div class="container container-mrg-lg">
