--- a/client/register/register.html
+++ b/client/register/register.html
@@ -1,9 +1,14 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
         <div class="collapse navbar-collapse" id="myNavbar">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="">Federation of jewish communities of the CIS</a>
-            </div>
+            <a class="navbar-brand" href="">Federation of jewish communities of the CIS</a>
             <ul class="nav navbar-nav"></ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
